Adjusted some padding, messed with the palm illustration, fixed some overflow issues, killed the main background colour

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -19,7 +19,6 @@ html {
 body {
   font-family: $font-primary;
   letter-spacing: 0;
-  background: $color-cream;
 
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
