--- a/src/components/_homepage/testimonials.module.scss
+++ b/src/components/_homepage/testimonials.module.scss
@@ -14,24 +14,22 @@
 }
 .background {
   background-color: $color-darkgreen;
+  position: relative;
+  padding: 80px 0;
+  margin-bottom: 80px;
 
   &::before {
     content: '';
-    display: none;
     position: absolute;
-    left: 50%;
-    bottom: -10px;
+    right: -1%;
+    bottom: 0;
     z-index: 1;
-    width: 570px;
-    height: 400px;
+    width: 323px;
+    height: 480px;
     background-color: $color-greylt;
     mask: url('../../images/palm.svg') no-repeat 100% 100%;
     mask-size: contain;
-    transform: rotate(-140deg) translateX(20%) translateY(0%);
-    @media (min-width: $desktop) {
-      display: block;
-      transform: rotate(-180deg) translateX(-90%) translateY(75%);
-    }
+    transform: rotate(-180deg) translateX(0%) translateY(-70%);
   }
 }
 
